--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
+    "build": "tsc -p tsconfig.json",
     "start:dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "start:prod": "npm run build && node build/index.js",
-    "start:multi": "ts-node src/cluster.ts",
-    "build": "tsc -p tsconfig.json"
+    "start:multi": "ts-node src/cluster.ts"
   },  
   "dependencies": {
     "express": "^4.18.2",
