--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "start:dev": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "start:dev": "nodemon --watch src --ext ts --exec ts-node index.ts",
     "start:prod": "npm run build && node build/index.js",
     "start:multi": "ts-node src/cluster.ts"
   },  
