--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
     "start:dev": "nodemon --watch src --ext ts --exec ts-node index.ts",
     "start:prod": "npm run build && node build/index.js",
     "start:multi": "ts-node src/cluster.ts"
-  },  
+  },
   "dependencies": {
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1"
   }
