--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "start:dev": "nodemon --watch src --ext ts --exec ts-node index.ts",
-    "start:prod": "npm run build && node build/index.js",
-    "start:multi": "ts-node src/cluster.ts"
+    "start:dev": "nodemon --exec ts-node-dev src/app.ts",
+    "start:prod": "npm run build && node dist/app.js",
+    "build": "tsc -p ."
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   },
@@ -13,6 +14,7 @@
     "@types/express": "^4.17.17",
     "@types/uuid": "^9.0.2",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0"
   }
 }
